--- a/RawBencher/packages.config
+++ b/RawBencher/packages.config
@@ -1,77 +1,81 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr3.Runtime" version="3.5.1" targetFramework="net462" />
-  <package id="CS-Script.bin" version="3.29.0" targetFramework="net472" />
-  <package id="Dapper" version="1.60.6" targetFramework="net472" />
-  <package id="EntityFramework" version="6.2.0" targetFramework="net462" />
+  <package id="CS-Script.bin" version="3.29.0" targetFramework="net48" />
+  <package id="CS-Script.Core" version="1.2.2" targetFramework="net48" />
+  <package id="Dapper" version="2.0.35" targetFramework="net472" />
+  <package id="EntityFramework" version="6.4.0" targetFramework="net472" />
   <package id="Iesi.Collections" version="4.0.4" targetFramework="net462" />
   <package id="Ix-Async" version="1.2.5" targetFramework="net46" />
-  <package id="linq2db" version="2.7.4" targetFramework="net472" />
-  <package id="Microsoft.CodeAnalysis.Analyzers" version="2.9.3" targetFramework="net472" developmentDependency="true" />
-  <package id="Microsoft.CodeAnalysis.Common" version="3.1.0" targetFramework="net472" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="3.1.0" targetFramework="net472" />
-  <package id="Microsoft.CodeAnalysis.CSharp.Scripting" version="3.1.0" targetFramework="net472" />
-  <package id="Microsoft.CodeAnalysis.Scripting.Common" version="3.1.0" targetFramework="net472" />
-  <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net462" />
+  <package id="linq2db" version="2.9.7" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net48" />
+  <package id="Microsoft.Bcl.HashCode" version="1.1.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="3.0.0" targetFramework="net48" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.Common" version="3.5.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="3.5.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Scripting" version="3.5.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.Scripting.Common" version="3.5.0" targetFramework="net48" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
   <package id="Microsoft.Data.SqlClient" version="1.1.1" targetFramework="net472" />
-  <package id="Microsoft.Data.SqlClient.SNI" version="1.1.0" targetFramework="net472" />
+  <package id="Microsoft.Data.SqlClient.SNI" version="1.1.1" targetFramework="net48" />
   <package id="Microsoft.DotNet.InternalAbstractions" version="1.0.0" targetFramework="net461" />
-  <package id="Microsoft.DotNet.PlatformAbstractions" version="2.1.0" targetFramework="net462" />
-  <package id="Microsoft.EntityFrameworkCore" version="2.2.6" targetFramework="net472" />
-  <package id="Microsoft.EntityFrameworkCore.Abstractions" version="2.2.6" targetFramework="net472" />
-  <package id="Microsoft.EntityFrameworkCore.Analyzers" version="2.2.6" targetFramework="net472" />
-  <package id="Microsoft.EntityFrameworkCore.Relational" version="2.2.6" targetFramework="net472" />
-  <package id="Microsoft.EntityFrameworkCore.SqlServer" version="2.2.6" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Caching.Abstractions" version="2.2.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Caching.Memory" version="2.2.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Configuration" version="2.2.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.2.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Configuration.Binder" version="2.2.4" targetFramework="net472" />
-  <package id="Microsoft.Extensions.DependencyInjection" version="2.2.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.2.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Logging" version="2.2.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.2.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Options" version="2.2.0" targetFramework="net462" />
+  <package id="Microsoft.DotNet.PlatformAbstractions" version="3.1.3" targetFramework="net48" />
+  <package id="Microsoft.EntityFrameworkCore" version="3.1.3" targetFramework="net48" />
+  <package id="Microsoft.EntityFrameworkCore.Abstractions" version="3.1.3" targetFramework="net48" />
+  <package id="Microsoft.EntityFrameworkCore.Analyzers" version="3.1.3" targetFramework="net48" />
+  <package id="Microsoft.EntityFrameworkCore.Relational" version="3.1.3" targetFramework="net48" />
+  <package id="Microsoft.EntityFrameworkCore.SqlServer" version="3.1.3" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="3.1.3" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="3.1.3" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration" version="3.1.3" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.1.3" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="3.1.3" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="3.1.3" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.1.3" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyModel" version="3.1.3" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging" version="3.1.3" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.3" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Options" version="3.1.3" targetFramework="net48" />
   <package id="Microsoft.Extensions.OptionsModel" version="1.0.0-rc1-final" targetFramework="net451" />
-  <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net462" />
-  <package id="Microsoft.Identity.Client" version="3.0.8" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.5.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Logging" version="5.5.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Protocols" version="5.5.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="5.5.0" targetFramework="net472" />
-  <package id="Microsoft.IdentityModel.Tokens" version="5.5.0" targetFramework="net472" />
-  <package id="Microsoft.NETCore.Platforms" version="2.2.2" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="3.1.3" targetFramework="net48" />
+  <package id="Microsoft.Identity.Client" version="4.11.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.5.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Logging" version="6.5.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Protocols" version="6.5.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="6.5.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Tokens" version="6.5.0" targetFramework="net48" />
+  <package id="Microsoft.NETCore.Platforms" version="3.1.0" targetFramework="net48" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
-  <package id="Microsoft.Win32.Registry" version="4.5.0" targetFramework="net462" />
+  <package id="Microsoft.Win32.Registry" version="4.7.0" targetFramework="net48" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net462" />
-  <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net472" />
-  <package id="NHibernate" version="5.2.5" targetFramework="net472" />
-  <package id="NPoco" version="4.0.1" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net48" />
+  <package id="NHibernate" version="5.2.7" targetFramework="net472" />
+  <package id="NPoco" version="4.0.2" targetFramework="net472" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net462" />
   <package id="Remotion.Linq.EagerFetching" version="2.2.0" targetFramework="net462" />
   <package id="RepoDb" version="1.10.11" targetFramework="net472" />
   <package id="RepoDb.SqlServer" version="1.0.6" targetFramework="net472" />
-  <package id="SD.LLBLGen.Pro.DQE.SqlServer" version="5.6.0-Beta-20190708" targetFramework="net472" />
-  <package id="SD.LLBLGen.Pro.ORMSupportClasses" version="5.6.0-Beta-20190708" targetFramework="net472" />
-  <package id="ServiceStack.Common" version="5.5.0" targetFramework="net472" />
-  <package id="ServiceStack.Interfaces" version="5.5.0" targetFramework="net472" />
-  <package id="ServiceStack.OrmLite" version="5.5.0" targetFramework="net472" />
-  <package id="ServiceStack.OrmLite.SqlServer" version="5.5.0" targetFramework="net472" />
-  <package id="ServiceStack.Text" version="5.5.0" targetFramework="net472" />
+  <package id="SD.LLBLGen.Pro.DQE.SqlServer" version="5.6.2" targetFramework="net472" />
+  <package id="SD.LLBLGen.Pro.ORMSupportClasses" version="5.6.2" targetFramework="net472" />
+  <package id="ServiceStack.Common" version="5.8.0" targetFramework="net48" />
+  <package id="ServiceStack.Interfaces" version="5.8.0" targetFramework="net48" />
+  <package id="ServiceStack.OrmLite" version="5.8.0" targetFramework="net48" />
+  <package id="ServiceStack.OrmLite.SqlServer" version="5.8.0" targetFramework="net48" />
+  <package id="ServiceStack.Text" version="5.8.0" targetFramework="net48" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
-  <package id="System.Buffers" version="4.5.0" targetFramework="net462" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
-  <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net462" />
+  <package id="System.Collections.Immutable" version="1.7.0" targetFramework="net472" />
   <package id="System.ComponentModel" version="4.3.0" targetFramework="net461" />
-  <package id="System.ComponentModel.Annotations" version="4.5.0" targetFramework="net462" />
+  <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net472" />
   <package id="System.ComponentModel.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.ComponentModel.TypeConverter" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
   <package id="System.Console" version="4.3.1" targetFramework="net462" />
   <package id="System.Data.Common" version="4.3.0" targetFramework="net472" />
-  <package id="System.Data.SqlClient" version="4.8.0" targetFramework="net472" />
+  <package id="System.Data.SqlClient" version="4.8.1" targetFramework="net48" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net461" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.5.1" targetFramework="net462" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.7.0" targetFramework="net48" />
   <package id="System.Diagnostics.FileVersionInfo" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.StackTrace" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net461" />
@@ -79,50 +83,53 @@
   <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net461" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net461" />
   <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="net461" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="5.5.0" targetFramework="net472" />
-  <package id="System.Interactive.Async" version="3.2.0" targetFramework="net462" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="6.5.0" targetFramework="net48" />
+  <package id="System.Interactive.Async" version="4.1.1" targetFramework="net48" />
   <package id="System.IO" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net461" />
   <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net461" />
   <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net461" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Linq" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="System.Linq.Async" version="4.1.1" targetFramework="net48" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
   <package id="System.Linq.Queryable" version="4.3.0" targetFramework="net461" />
-  <package id="System.Memory" version="4.5.3" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net48" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net462" />
   <package id="System.Net.Primitives" version="4.3.1" targetFramework="net472" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net462" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
-  <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net472" />
-  <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net472" />
+  <package id="System.Reflection.Emit" version="4.7.0" targetFramework="net48" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.7.0" targetFramework="net48" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net461" />
-  <package id="System.Reflection.Metadata" version="1.6.0" targetFramework="net462" />
+  <package id="System.Reflection.Metadata" version="1.8.0" targetFramework="net48" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net461" />
-  <package id="System.Reflection.TypeExtensions" version="4.4.0" targetFramework="net472" />
+  <package id="System.Reflection.TypeExtensions" version="4.7.0" targetFramework="net48" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net462" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net462" />
+  <package id="System.Runtime.Caching" version="4.7.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net48" />
   <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="net462" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.Loader" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net461" />
-  <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net462" />
+  <package id="System.Security.AccessControl" version="4.7.0" targetFramework="net48" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net462" requireReinstallation="true" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net462" />
-  <package id="System.Security.Principal.Windows" version="4.5.1" targetFramework="net462" />
+  <package id="System.Security.Principal.Windows" version="4.7.0" targetFramework="net48" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net461" />
-  <package id="System.Text.Encoding.CodePages" version="4.5.1" targetFramework="net462" />
+  <package id="System.Text.Encoding.CodePages" version="4.7.0" targetFramework="net48" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net472" />
   <package id="System.Threading" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net461" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Thread" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net461" />
@@ -133,8 +140,8 @@
   <package id="System.Xml.XmlSerializer" version="4.3.0" targetFramework="net462" />
   <package id="System.Xml.XPath" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.XPath.XDocument" version="4.3.0" targetFramework="net461" />
-  <package id="Tortuga.Anchor" version="2.1.7001.32222" targetFramework="net462" />
-  <package id="Tortuga.Chain.CompiledMaterializers" version="2.1.7009.34082" targetFramework="net472" />
-  <package id="Tortuga.Chain.Core" version="2.1.7009.31212" targetFramework="net472" />
-  <package id="Tortuga.Chain.SqlServer" version="2.1.7009.33175" targetFramework="net472" />
+  <package id="Tortuga.Anchor" version="3.2.0" targetFramework="net472" />
+  <package id="Tortuga.Chain.CompiledMaterializers" version="3.3.3" targetFramework="net472" />
+  <package id="Tortuga.Chain.Core" version="3.3.2" targetFramework="net472" />
+  <package id="Tortuga.Chain.SqlServer" version="3.3.2" targetFramework="net472" />
 </packages>
